--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="https://github.com/josiasfontes/estrutura-de-dados/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/josiasfontes/estrutura-de-dados/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/josiasfontes/estrutura-de-dados">View On <strong>GitHub</strong></a></li>
+          <li><a href="MyStack/doc/index.html"><strong>Docs</strong></a></li>
         </ul>
       </header>
       <section>
