--- a/index.html
+++ b/index.html
@@ -30,37 +30,19 @@
       </header>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+  <p><font face="Consolas" color="black">Uma das estruturas de dados mais simples é a pilha. A idéia fundamental da pilha é que todo o acesso a seus elementos é feito através do seu topo. Assim, quando um elemento novo é introduzido na pilha, passa a ser o elemento do topo, e o único elemento que pode ser removido da pilha é o do topo. Isto faz com que os elementos da pilha sejam retirados na ordem inversa à ordem em que foram introduzidos: o primeiro que sai é o último que entrou.</font></p>
+<p><font face="Consolas" color="black"><h2><i><b>Filas</b></i></h2></font></p>         
+ <p><font face="Consolas" color="black">Outra estrutura de dados bastante usada em computação é a fila. A ideia fundamental da fila é que só podemos inserir um novo elemento no final da fila e só podemos retirar o elemento do início. A estrutura de fila é uma analogia natural com o conceito de fila que usamos no nosso dia a dia: quem primeiro entra numa fila é o primeiro a ser atendido (a sair da fila). Um exemplo de utilização em computação é a implementação de uma fila de impressão.</font></p><br />
+ <p><h4 align="center"><font face="Consolas" color="black"><h2><i><b>Pilhas e Filas</b></i></h2></font></h4>
+  <p><font face="Consolas" color="black">Em determinadas aplicações, as pilhas e filas representam estruturas de dados importantes, nas quais seus elementos são organizados em função de um critério que regulamenta a entrada e a saída dos elementos.</font></p>        
+         <p><font face="Consolas" color="black">Basicamente o que diferencia a fila da pilha é a ordem de saída dos elementos: enquanto na pilha “o último que entra é o primeiro que sai”, na fila “o primeiro que entra é o primeiro que sai”.</font></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+         <p><font face="Consolas" color="black"><h2><i><b>Classe AVEX</b></i></h2></font></p>
+          
+  <p><font face="Consolas" color="black"> A classe "AVEX" foi desenvolvida para trabalhar com expressoes matematicas. Ela possui tres metodos, onde o primeiro que tem por nome "AvalPosfixa", calcula o valor da expressao de uma pilha em formato posfixa, ou seja, método que retorna o valor da expressão de uma lista posfixa.O segundo metodo chamado "infxPsfx" converte uma pilha infixa para o formato posfixa, ou seja, esse método converte uma lista infixa em pósfixa. Ja o terceiro metodo chamado "prcd" verifica a prioridade de operadores matematicos, retornando verdadeiro se o primeiro operador tiver maior prioridade que o segundo, caso contrario, retorna falso.</font></p> 
+     </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/josiasfontes">josiasfontes</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
