--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section>
         <h3>
 
-
+<p><font face="Consolas" color="black"><h2><i><b>Pilhas</b></i></h2></font></p>
   <p><font face="Consolas" color="black">Uma das estruturas de dados mais simples é a pilha. A idéia fundamental da pilha é que todo o acesso a seus elementos é feito através do seu topo. Assim, quando um elemento novo é introduzido na pilha, passa a ser o elemento do topo, e o único elemento que pode ser removido da pilha é o do topo. Isto faz com que os elementos da pilha sejam retirados na ordem inversa à ordem em que foram introduzidos: o primeiro que sai é o último que entrou.</font></p>
 <p><font face="Consolas" color="black"><h2><i><b>Filas</b></i></h2></font></p>         
  <p><font face="Consolas" color="black">Outra estrutura de dados bastante usada em computação é a fila. A ideia fundamental da fila é que só podemos inserir um novo elemento no final da fila e só podemos retirar o elemento do início. A estrutura de fila é uma analogia natural com o conceito de fila que usamos no nosso dia a dia: quem primeiro entra numa fila é o primeiro a ser atendido (a sair da fila). Um exemplo de utilização em computação é a implementação de uma fila de impressão.</font></p><br />
